tests/typechecker/should_fail/module_instances_10.csp
module M
exports
y = M1::y
endmodule

instance M1 = M
